input type fixed

--- a/main/index.html
+++ b/main/index.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="formLine right">
                     <span for="amount">Amount:</span>
-                    <input type="text" id="amount">
+                    <input type="number" id="amount" required>
                 </div>
                 <button type="submit" class="buttonSave">Add a new expense</button>
             </form>
