--- a/main/index.html
+++ b/main/index.html
@@ -11,55 +11,65 @@
 </head>
 <body>
     <header>
-        <h1 class="title">Expense Tracker App</h1>
+        <h1 class="title"><span class="redTitle">Expense</span> <span class="greenTitle">
+            Tracker
+        </span>  <span class="">App</span> </h1>
     <header>
-
-    <section class="content">
-        <h3 class="secondTitle">Add a new item: </h3>
+    <div class="expenseBody">
+        <section class="content">
+        <h3 class="secondTitle">Add a new item : </h3>
         <div class="form">
             <form id="expForm">
-                <div class="formLine left">
-                    <span for="type">Type:</span>
-                    <select id="type">
-                        <option value="chooseOne">Choose one...</option>
-                        <option value="Cash">Cash</option>
-                        <option value="Card">Card</option>
-                        <option value="Other">Other</option>
-                    </select>
+                <div class="formBody">
+                    <div class="firstRow">
+                        <div class="formLine">
+                            <span for="type">Type:</span>
+                            <select id="type">
+                                <option value="chooseOne">Choose one...</option>
+                                <option value="Cash">Cash</option>
+                                <option value="Card">Card</option>
+                                <option value="Other">Other</option>
+                            </select>
+                        </div>
+                        <div class="formLine secFormLine">
+                            <span for="name">Name:</span>
+                            <input type="text" id="name">
+                    </div>
+                    </div>
+                    <div class="secondRow">
+                        <div class="formLine">
+                            <span for="date">Date:</span>
+                            <input type="date" id="date">
+                        </div>
+                        <div class="formLine">
+                            <span for="amount">Amount:</span>
+                            <input type="number" id="amount" required>
+                        </div>
+                    </div>
                 </div>
-                <div class="formLine right">
-                    <span for="name">Name:</span>
-                    <input type="text" id="name">
+                <div class="formBtn">
+                    <button type="submit" class="buttonSave">Add a new expense</button>
                 </div>
-
-                <div class="formLine left">
-                    <span for="date">Date:</span>
-                    <input type="date" id="date">
-                </div>
-                <div class="formLine right">
-                    <span for="amount">Amount:</span>
-                    <input type="number" id="amount" required>
-                </div>
-                <button type="submit" class="buttonSave">Add a new expense</button>
             </form>
         </div>
-    </section>
-    <section class="content">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Type</th>
-                    <th>Name</th>
-                    <th>Date</th>
-                    <th>Amount</th>
-                    <th>Options</th>
-                </tr>
-            </thead>
-            <tbody id="expenseTable">
+        </section>
+        <section class="content">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Type</th>
+                        <th>Name</th>
+                        <th>Date</th>
+                        <th>Amount</th>
+                        <th>Options</th>
+                    </tr>
+                </thead>
+                <tbody id="expenseTable">
 
-            </tbody>
-        </table>
-    </section>
+                </tbody>
+            </table>
+        </section>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
